- retrieve models from inference endpoint - more efficiently skip tests that have already been completed - fix shutdown, so web server does not need to be sigkilled - made generic inference_endpoint config and api key to be injected as needed into agent config - expand pi agent message parsing support - fix duplicate logback dependency issue - make gradle test instruction a bit clearer - extract embedded trace files from results on startup to reduce in memory bloat